# chat-service

./: .env  chat.db  pyproject.toml
app/: auth_routes.py  chat.py  config.py  database.py  main.py  models.py  private_chat.py  profile_routes.py
